fix: set scrollbar-width to none globally

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -125,10 +125,7 @@ html {
 }
 
 
-.custom-scroll::-webkit-scrollbar {
-  display: none;
-}
-.custom-scroll {
+* {
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
